--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@
     --body-secondary-color: #2F303A;
     --body-third-color: #F5F4FA;
     --icon-background-color: #AFB1B8;
+    --time-and-function: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 body {
     font-family: var(--font-family-main);
@@ -47,6 +48,7 @@ button {
 .link {
     text-decoration: none;
     color: inherit;
+    transition: color var(--time-and-function), background-color var(--time-and-function);
 }
 .section {
     padding-top: 94px;
@@ -70,9 +72,7 @@ button {
     clip: rect(0 0 0 0);
     overflow: hidden;
 }
-/* header  */
-
-
+/* ==================== header ======================= */
 .link:hover,
 .link:focus {
     color: var(--logo-main-color);
@@ -81,12 +81,21 @@ button {
     background-color: var(--body-main-color);
     border-bottom: 1px solid #ECECEC;
 }
-a.current {
+.menu-link.current {
 color: var(--logo-main-color);
 }
+.menu-link.current::after {
+    position: absolute;
+    display: block;
+    bottom: -1px;
+    height: 4px;
+    width: 100%;
+    content: '';
+    background-color: var(--logo-main-color);
+    border-radius: 2px;
+}
 .head-wrapper {
-    display: flex;
-    
+    display: flex;=
 }
 .nav {
     display: flex; 
@@ -113,6 +122,7 @@ color: var(--logo-main-color);
     margin-right: 50px;
 }
 .menu-link {
+    position: relative;
     font-family: var(--font-family-main);
     font-weight: 500;
     line-height: 1.14;
@@ -179,6 +189,7 @@ color: var(--logo-main-color);
     margin-top: 30px;
     padding: 10px 32px;
     border-radius: 4px;
+    transition: background-color var(--time-and-function);
 }
 .hero-btn:hover, .hero-btn:focus {
     background-color: #188CE8;
@@ -249,6 +260,24 @@ color: var(--logo-main-color);
 }
 .box-list-item:not(:last-child) {
     margin-right: 30px;
+}
+.box-wrapper {
+    position: relative;
+}
+.box-header {
+    position: absolute;
+    padding: 27px 0;
+    width: 100%;
+    bottom: 0;
+    background-color: rgba(47, 48, 58, 0.8);
+
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-align: center;
+    text-transform: uppercase;
+
+    color: var(--body-main-color);
 }
 /* ============= team =============== */
 .team {
@@ -332,13 +361,14 @@ color: var(--logo-main-color);
     border: 1px solid var(--icon-background-color);
     border-radius: 4px;
     color: var(--icon-background-color);
+    transition: border-color var(--time-and-function), color var(--time-and-function);
 }
 
 .client-list-icon {
     fill: currentColor;
 }
 .client-list-link:hover, .client-list-link:focus {
-    border: 1px solid var(--logo-main-color);
+    border-color:  var(--logo-main-color);
     color: var(--logo-main-color);
 }
  /* ============= footer ========= */
@@ -403,6 +433,56 @@ color: var(--logo-main-color);
 .social-list-footer {
     margin-top: 20px;
 }
+/* ======================== MODAL ==================== */
+.backdrop.is-hidden {
+    visibility: hidden;
+    opacity: 0;
+    pointer-events: none;
+    transform: rotate(-90deg) scale(3);
+
+}
+
+.backdrop {
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.2);
+
+    transition: opacity var(--time-and-function), transform var(--time-and-function), visibility var(--time-and-function);
+}
+
+.modal {
+    position: relative;
+    background-color: var(--body-main-color);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    width: 528px;
+    height: 581px;
+}
+
+.modal-close-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    position: absolute;
+    top: 8px;
+    right: 8px;
+
+    width: 30px;
+    height: 30px;
+    background-color: transparent;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+}
+.modal-close-icon {
+    fill: var(--logo-secondary-color);
+}
 /* ======== portfolio  ============
 body*/
 .portfolio-btn {
@@ -419,6 +499,7 @@ body*/
     padding: 6px 22px;
     border: transparent;
     border-radius: 4px;
+    transition: color var(--time-and-function), background-color var(--time-and-function), box-shadow var(--time-and-function);
 }
 .portfolio-btn:hover, .portfolio-btn:focus {
     background-color: var(--logo-main-color);
@@ -443,6 +524,7 @@ body*/
 }
 .portfolio-link {
     display: block;
+    transition: box-shadow var(--time-and-function);
 }
 .portfolio-link:hover, .portfolio-link:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
@@ -465,4 +547,32 @@ body*/
     border: 1px solid #ECECEC;
     border-top: none;
     padding: 20px 24px;
+}
+.portfolio-img-wrapper {
+    position: relative;
+    overflow: hidden;
+    
+    
+}
+.img-overlay-text {
+    position: absolute;
+    top: 0;
+
+    display: block;
+    padding: 63px 24px;
+    height: 100%;
+    width: 100%;
+    transform: translate(0, 101%);
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 1.56;
+
+    transition: transform var(--time-and-function);
+    
+    background-color: rgba(33, 150, 243, 0.9);
+    color: var(--body-main-color);
+}
+.portfolio-link:hover .img-overlay-text,
+.portfolio-link:focus .img-overlay-text {
+    transform: translate(0, 0);
 }
