--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,6 @@ button {
 .link {
     text-decoration: none;
     color: inherit;
-    transition: color var(--time-and-function), background-color var(--time-and-function);
 }
 .section {
     padding-top: 94px;
@@ -129,6 +128,8 @@ color: var(--logo-main-color);
     letter-spacing: 0.02em;
     display: block;
     padding: 32px 0;
+
+    transition: color var(--time-and-function);
 }
 .contact-list {
     display: flex;
@@ -148,6 +149,8 @@ color: var(--logo-main-color);
 
     display: flex;
     align-items: center;
+
+    transition: color var(--time-and-function);
 }
 .contact-link-icon {
     fill: currentColor;
@@ -266,15 +269,16 @@ color: var(--logo-main-color);
 }
 .box-header {
     position: absolute;
-    padding: 27px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
+    height: 70px;
     bottom: 0;
     background-color: rgba(47, 48, 58, 0.8);
 
     font-weight: 700;
-    font-size: 14px;
     line-height: 1.14;
-    text-align: center;
     text-transform: uppercase;
 
     color: var(--body-main-color);
@@ -337,6 +341,8 @@ color: var(--logo-main-color);
     height: 100%;
     border-radius: 50%;
     color: var(--icon-background-color);
+
+    transition: color var(--time-and-function), background-color var(--time-and-function);
 }
 .social-list-icon {
     fill: currentColor;
@@ -396,9 +402,11 @@ color: var(--logo-main-color);
 }
 .adress-list-maps {
     color: var(--body-main-color);
+    transition: color var(--time-and-function);
 }
 .adress-list-link {
     color: #FFFFFF99;
+    transition: color var(--time-and-function);
 }
 .footer-paragraph {
     font-weight: 700;
@@ -420,6 +428,8 @@ color: var(--logo-main-color);
     border-radius: 50%;
     background-color: rgba(255, 255, 255, 0.1);
     color: var(--body-main-color);
+
+    transition: background-color var(--time-and-function);
 }
 .social-list-icon-footer {
     fill: var(--body-main-color);
